fix: increase spacing between choose amount content and top

--- a/src/Views/Form/Themes/Sequoia/assets/css/form.scss
+++ b/src/Views/Form/Themes/Sequoia/assets/css/form.scss
@@ -330,7 +330,7 @@ p {
 	.content {
 		max-width: 80%;
 		text-align: center;
-		margin-top: 20px;
+		margin-top: 30px;
 		margin-bottom: 20px;
 	}
 
